k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: topic-scanner
  labels:
    name: topic-scanner
